fixing viewport units on mobile devices

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -46,7 +46,10 @@ $color-border: #90756A;
     family: "Noto Serif", serif;
     size: 14px;
   }
+  height: 100%;
   height: 100vh;
+  //fixing viewport units on mobile devices
+  height: calc(var(--mobileVH, 1vh) * 100);
   min-width: 320px;
   max-width: 1600px;
 }
@@ -495,11 +498,12 @@ $color-border: #90756A;
 
 ////////////////////////////// for touch screen devices (to fix 100vh) //////////////////////////////
 
+/*
 @media(hover: none) and (pointer: coarse) {
 
   .main {
-    height: 100vh;
-    height: calc(var($mobileVH, 1vh) * 100);
+    height: calc(var(--mobileVH, 1vh) * 100);
   }
 
 }
+*/
